    darker colour schemes.
 7. Remove QTC_CAIRO_1_10_HACK cmake option. For cairo 1.10, an easier fix is to just
    ensure there is no colour stop at 1.0. Thanks to Hugo Pereira Da Costa for
    pointing this out.
 8. Allow window drag in toolbars and other areas.
 9. Implement hover and focus for *some* scrolled windows.
10. Add support for KDE4 StartDragDist config item to control when window drag starts.

1.7.2
-----
 1. Allow editable combo-box popup to be rounded.
 2. Fix initial treeview highlight.
 3. Fix rounded popup border when using compositing.
 4. Add vmware, vmplayer, and gtk to list of app to exclude from opacity settings. 
    This also prevents using RGBA for rounded tooltips and popup menus.
 5. Fix opacity setting of squared popup menus.
 6. Improve group-box label positioning.
 7. Fix line-style group box when text is above or below the line.
 8. Fix crash when using a tiled image for background appearance, but not for menu
    appearance - was using wrong config item!
 9. Fix border of hovered treeview items.
10. Allow combo popupmenus to be rounded if not using compositing.
11. Set/clear widget masks when compositing toggled.
12. Fix treeview line end detection.
13. Fix treeview selection, and line, corruption.
14. Fix treeview line dimensions.
15. Fix size of fonts in GIMPs dock.
16. Fix firefox scrollbar background when using flat buttons and flat background.
17. Fix clipping issues with full and filled focus types.
18. For configs older than 1.7.2, disable usage of alpha channel to draw rounded
    tooltips and popup menus. Too many issues with apps to enable this by default.

1.7.1
-----
1. Use rgba colormap to draw rounded tooltips and popup menus - gives nicer border.
   This may be disabled via KDE4 config dialog.
2. Allow 'menus' of non-editable combos to be rounded. (But *only* if the app can
   be set to use an rgba colormap)
3. Remove resize grips - kwin handles this.
4. Add mouse tracking to treeview lists.